thumbnail: Don't copy files to /tmp before using them

Instead of copying whole files to the sandbox, bind mount the _file_.
This is especially important when dealing with huge files when only a
tiny portion of the file will actually be read.

https://bugzilla.gnome.org/show_bug.cgi?id=786586